--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -4,7 +4,9 @@
     <file>stop.png</file>
     <file>fake.png</file>
     <file>minimize.png</file>
+    <file>startup.png</file>
     <file>folder_add.png</file>
+    <file>tick.png</file>
     <file>star.png</file>
     <file>close.png</file>
     <file>trash.png</file>
