--- a/main_window_design.ui
+++ b/main_window_design.ui
@@ -163,7 +163,7 @@ color: rgb(204, 204, 204);
 padding: 0px 0px 0px 20px;</string>
         </property>
         <property name="text">
-         <string notr="true">Blender Version Manager 1.2</string>
+         <string notr="true">Blender Version Manager 1.3</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -502,7 +502,7 @@ color:  rgb(97, 97, 98);</string>
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>22</height>
+          <height>28</height>
          </size>
         </property>
         <property name="font">
@@ -519,14 +519,15 @@ color:  rgb(97, 97, 98);</string>
         <property name="statusTip">
          <string notr="true"/>
         </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
         <property name="styleSheet">
          <string notr="true">QProgressBar
 {
 	color: rgb(255, 255, 255);
 	background-color: rgb(51, 51, 51);
-	border-style: solid;
 	border-color: rgb(51, 51, 51);
-	border-width: 3px;
 }
 
 QProgressBar::chunk 
