--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icons">
+    <file>wiki.png</file>
     <file>settings.png</file>
     <file>download.png</file>
     <file>stop.png</file>
